@@ -7,7 +7,7 @@ author   'Cory G Watson <gphat@cpan.org>';
 build_requires 'Test::More';
 
 requires 'Geometry::Primitive' => '0.09';
-requires 'Graphics::Color' => '0.09';
+requires 'Graphics::Color' => '0.12';
 requires 'Moose' => '0.54';
 requires 'MooseX::Clone' => '0.03';
 requires 'MooseX::AttributeHelpers' => '0.12';
